--- a/single-repo.html
+++ b/single-repo.html
@@ -26,9 +26,13 @@
     <div id="issues-container" class="list-group">
 
     </div>
+    
+    <div id="limit-warning">
+
+    </div>
   
   </main>
-  
+
   <script src="./assets/js/single.js"></script>
 </body>
 
