--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
           <button type="submit" class="btn">Get User</button>
         </form>
       </div>
+      <div class="card">
+        <h3 class="card-header text-uppercase">SEARCH BY TOPIC</h3>
+        <div class="card-body" id="language-buttons">
+          <button data="data-language" class="btn">JavaScript</button>
+          <button data="data-language" class="btn">HTML</button>
+          <button data="data-language" class="btn">CSS</button>
+        </div>
+      </div>
     </div>
   
     <div class="col-12 col-md-8">
